# display_vulkan_from_kotlin_or_swift

./: .gitmodules  LICENSE  README.md  build.gradle  local.properties  settings.gradle
app/: LICENSE  build.gradle
app/licenses/: LICENSE_THIERRY_VILMART
app/src/androidTest/java/com/thierry/android_surface_view_with_vulkan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni_vulkan/: 15-draw_cube.frag  15-draw_cube.frag.h  15-draw_cube.vert  15-draw_cube.vert.h  AndroidGraphicsApplication.cpp  AndroidGraphicsApplication.hpp  CMakeLists.txt  GraphicsApplication.cpp  GraphicsApplication.hpp  VulkanAppBridge.cpp  VulkanAppBridge.hpp
app/src/main/cpp/jni_vulkan/utils/: util.cpp  util.hpp  util_init.cpp  util_init.hpp  volk_setup.hpp
app/src/main/cpp/jni_vulkan/volk/: CMakeLists.txt
app/src/main/java/com/thierry/android_surface_view_with_vulkan/: Application.kt  MainActivity.kt  VulkanAppBridge.kt  VulkanSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/thierry/android_surface_view_with_vulkan/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
licenses/: LICENSE_LUNARG  LICENSE_VOLK
